--- a/RecipeBox.API/RecipeBox.API.csproj
+++ b/RecipeBox.API/RecipeBox.API.csproj
@@ -13,10 +13,7 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0"/>
-    <PackageReference Include="Moq" Version="4.14.1"/>
-    <PackageReference Include="Microsoft.CodeCoverage" Version="16.6.1"/>
-    <PackageReference Include="xunit" Version="2.4.1"/>
-    <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1"/>
+    <!-- <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1"/> -->
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="3.0.0"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.0.0"/>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
