--- a/recipebox.client/package.json
+++ b/recipebox.client/package.json
@@ -7,8 +7,10 @@
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.20.0",
+		"bootstrap": "^4.5.2",
 		"moment": "^2.27.0",
 		"react": "^16.13.1",
+		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
 		"react-moment": "^0.9.7",
 		"react-redux": "^7.2.1",
@@ -29,8 +31,16 @@
 		"extends": "react-app"
 	},
 	"browserslist": {
-		"production": [ ">0.2%", "not dead", "not op_mini all" ],
-		"development": [ "last 1 chrome version", "last 1 firefox version", "last 1 safari version" ]
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
 	},
 	"proxy": "http://localhost:5000"
 }
