--- a/RecipeBox.API/RecipeBox.API.csproj
+++ b/RecipeBox.API/RecipeBox.API.csproj
@@ -3,14 +3,14 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <GenerateProgramFile>false</GenerateProgramFile>
   </PropertyGroup>
-  <ItemGroup>&#xD;
+  <ItemGroup>&#xD;&#xD;
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="MailKit" Version="2.8.0"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.0.1"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.0.1"/>
     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.1"/>
-    <PackageReference Include="SendGrid" Version="9.20.0"/>
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.0.0"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0"/>
