--- a/recipebox.client/package.json
+++ b/recipebox.client/package.json
@@ -10,6 +10,7 @@
 		"bootstrap": "^4.5.2",
 		"moment": "^2.27.0",
 		"react": "^16.13.1",
+		"react-awesome-slider": "^4.1.0",
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
 		"react-dropzone": "^11.2.0",
