--- a/recipebox.client/package.json
+++ b/recipebox.client/package.json
@@ -21,6 +21,8 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-thunk": "^2.3.0",
+		"semantic-ui-css": "^2.4.1",
+		"semantic-ui-react": "^1.3.1",
 		"uuid": "^8.3.0"
 	},
 	"scripts": {
