--- a/recipebox.client/package.json
+++ b/recipebox.client/package.json
@@ -14,6 +14,7 @@
 		"react-bootstrap": "^1.3.0",
 		"react-dom": "^16.13.1",
 		"react-dropzone": "^11.2.0",
+		"react-lazy-load-image-component": "^1.5.0",
 		"react-moment": "^0.9.7",
 		"react-redux": "^7.2.1",
 		"react-router-dom": "^5.2.0",
