--- a/RecipeBox.Tests/RecipeBox.Tests.csproj
+++ b/RecipeBox.Tests/RecipeBox.Tests.csproj
@@ -4,12 +4,15 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="3.0.1"/>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0"/>
     <PackageReference Include="xunit" Version="2.4.0"/>
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0"/>
     <PackageReference Include="coverlet.collector" Version="1.2.0"/>
     <PackageReference Include="Moq" Version="4.14.1"/>
     <PackageReference Include="coverlet.msbuild" Version="2.9.0"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.1"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\RecipeBox.Api\RecipeBox.Api.csproj"/>
